block&inline element

--- a/Lecture_6_WD/index.html
+++ b/Lecture_6_WD/index.html
@@ -41,6 +41,72 @@
             <td>Ahirwar</td>
         </tr>
     </table>
+   <p>
+    <ul>
+        <li>A</li>
+        <li>B</li>
+        <li>C</li>
+    </ul>
+   </p>
+   <!-- section>p>p>p -->
+   <section>
+    <p>
+        <p>
+            <p></p>
+        </p>
+    </p>
+   </section>
+  <!-- section>p*3 -->
+  <section>
+    <p></p>
+    <p></p>
+    <p></p>
+  </section>
+  <!-- table>tr>td*5 -->
+ <table>
+    <tr>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+    </tr>
+ </table>
+ <!-- table>tr*2>td*5 -->
+ <!-- table>(tr>td*5)*2 -->
+ <table>
+    <tr>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+    </tr>
+    <tr>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+    </tr>
+ </table>
+   <div class="wrapper">
+     <talble></talble>
+     <section></section>
+     <p>
+        <p></p>
+     </p>
+   </div>
+ <div class="container">
+    <table>
+        <tr></tr>
+        <tr></tr>
+    </table>
+ </div>
+<div style="background-color: chocolate;">this is my block element </div>
+<span style="background-color: darkgoldenrod;">This is  my inline element</span>
+<span style="background-color: darkgoldenrod;">This is  my inline element</span>
+<span style="background-color: darkgoldenrod;">This is  my inline element</span>
 
 </body>
 </html>
