--- a/Lecture_6_WD/index.html
+++ b/Lecture_6_WD/index.html
@@ -182,9 +182,9 @@
  
 </nav>
 
-<a href="https://github.com/sachinbaghel10/HTML">GitHub</a>
-<a href="mailto:hellosir@gmail.com">Email</a>
-<a href="tel:6329374920">Call Us</a>
+<a style="color:blue" href="https://github.com/sachinbaghel10/HTML">GitHub</a>
+<a style="color:blue" href="mailto:hellosir@gmail.com">Email</a>
+<a style="color:blue" href="tel:6329374920">Call Us</a>
 
 
 </body>
