--- a/Lecture_5_WD/index.html
+++ b/Lecture_5_WD/index.html
@@ -67,8 +67,8 @@
     </pre>
      <br>
      <br>
-    <a href=https://www.mozilla.org/><button>favorite website</button></a></p>
-    <a href="https://www.linkedin.com/in/sachin-baghel-518389193/"><button>Linkedin Profile</button></a><br>
+    <a  href=https://www.mozilla.org/><button style="color:blue">favorite website</button></a></p>
+    <a  href="https://www.linkedin.com/in/sachin-baghel-518389193/"><button style="color:blue">Linkedin Profile</button></a><br>
     <h3>Grocery</h3>
     <ul>
         <li>Maggi</li>
@@ -109,7 +109,13 @@
 
     </table>
     <img src="Alone.png
-    " alt="NO body is care" width="100" height="100">
-
+    " alt="NO body is care" width="200" height="200">
+    <br>
+    <ul>
+        <li>Diyansh</li>
+        <li>Nandini</li>
+        <li>Aarav</li>
+        <li>Nikhil</li>
+    </ul>
 </body>
 </html>
