--- a/Lecture_7_WD/index.html
+++ b/Lecture_7_WD/index.html
@@ -7,6 +7,65 @@
     <title>Document</title>
 </head>
 <body>
-     td>tr
+    <h3> <b style="color:rgb(22, 15, 232)">CREATING A TABLE </b> </h3>
+     <table border="1">
+        <thead>
+            <th style="color:darkorange">Student Id</th>
+            <th style="color:darkorange">Student Name</th>
+            <th style="color:darkorange">Gender</th>
+            <th style="color:darkorange">Age</th>
+        </thead>
+        <tb>
+            <tr>
+                <td>1234</td>
+                <td>Badal</td>
+                <td>Male</td>
+                <td>17</td>
+            </tr>
+            <tr>
+                <td>1235</td>
+                <td>John</td>
+                <td>Male</td>
+                <td rowspan="3">19</td>
+            </tr>
+            <tr>
+                <td>1236</td>
+                <td>Divyand</td>
+                <td>Male</td>
+                <!-- <td>12</td> -->
+            </tr>
+            <tr>
+                <td>1237</td>
+                <td>Aarav</td>
+                <td>Male</td>
+                <!-- <td>4</td> -->
+            </tr>
+        </tb>
+
+     </table>
 </body>
+<br>
+<br>
+    <table border="1">
+        <thead>
+            <th>Add NO.</th>
+            <th>Student Name</th>
+            <th>Class</th>   
+        </thead>
+    <tr>
+        <td>12</td>
+        <td>Ankit</td>
+        <td rowspan="3">12th</td>
+    </tr>
+    <tr>
+        <td>13</td>
+        <td>Sachin</td>
+        <!-- <td>12th</td> -->
+    </tr>
+    <tr>
+        <td>14</td>
+        <td >Naveen</td>
+        <!-- <td>12th</td> -->
+    </tr>
+    </table>
 </html>
