--- a/Lecture_8_WD/input_atribute.html
+++ b/Lecture_8_WD/input_atribute.html
@@ -9,6 +9,7 @@
 <body>
     <form>
        <fieldset>
+        <legend>This My 1st form this all elements</legend>
         <label for="textfield"> Tell us smth</label><br>
         <input type="text" name="textfield" id="textfield" placeholder="tell me something">
     <br>
