--- a/Lecture_10_WD/Project-HTML.html
+++ b/Lecture_10_WD/Project-HTML.html
@@ -7,7 +7,105 @@
     <title>Document</title>
 </head>
 <body>
-   <h3>Sachin Baghel</h3> 
+    
+     <div>
+        
+        <div>
+            <h3>Sachin Baghel</h3>
+            <p>Contact: <a style="color:blue" href="https://github.com/sachinbaghel10/HTML"> https://github.com/sachinbaghel10/HTML</a></p>
+            <p>Linkedin: <a style="color:blue" href="https://www.linkedin.com/in/sachin-baghel-518389193/">https://www.linkedin.com/in/sachin-baghel-518389193/ </a></p>
+            <p>Email: <a style="color:blue" href="sachinbaghel@gmail.com">sachinbaghel@gmail.com</a></p>
+        </div>
+
+        <div>
+           <table>
+            <tr>
+                <td>   <img src="MyPic.jpg" width="50" height="60"></td>
+                <td> <span>
+                    To work in a pragmatic way in an organization where I can
+                    show my talent and enhance my skills to meet company goals
+                    and objectives with full intergrity and zest
+                </span></td>
+            </tr>
+           </table> 
+        </div>
+        <div>
+            <h2>Education</h2>
+            <ul>
+                <li>Bachelor of Technology </li>
+                <li>12th Brilliant Publick School</li>
+            </ul>
+        </div>
+
+        <div>
+            <h2>Work Experience</h2>
+            <p>DevOps Engineer,Epam Systems</p>
+            <p>January 2023 - May</p>
+            <ul>
+                <li>Deployment of Applications</li>
+                <li> Infrastructure Creating with the help of terraform</li>
+            </ul>
+
+        </div>
+
+         <div>
+            <h2>Skills</h2>
+            <ul>
+                <li>C/C++</li>
+                <li>Java</li>
+                <li>HTML</li>
+                <li>CSS</li>
+                <li>DEVOPS</li>
+            </ul>
+         </div>
+
+         <section>
+            <h2>Projects</h2>
+            <ul>
+               <h4>1.Sudoku Solver (2022)</h4>
+                <li>Used HTML/CSS, JavaScript, and Structure and Algorithm</li>
+                <li>Used of backtracking concepts to build a sudoku solver.</li>
+            </ul>
+            <ul>
+               <h4>2.Dashboard based on SuperStore (2022)</h4>
+            <li>Used Tableau for Data Analysis and Visualization</li>
+            <li>Create 5 objectives by the analysis of the dataset of SuperStore(sales) then
+                design the Dashboard</li>
+            </ul>
+         </section>
+
+         <section>
+            <h2>Achivement</h2>
+            <ul>
+                <li>Inter-School Sports &
+                    Games Competition</li>
+                <li>Open District Athletics
+                    Meet</li>
+                <li>Inter School Sports
+                    Competition Kabaddi &
+                    kho-kh (Bronze Medal)</li>
+            </ul>
+         </section>
+
+         <section>
+            <h2>Language</h2>
+            <ul>
+                <li>English</li>
+                <li>Hindi</li>
+            </ul>
+         </section>
+
+         <section>
+            <h3>Frequently Asked Questions</h3>    
+            <details>
+                <summary>What is your Name ?</summary>
+                <p>My name is Sachin Ahirwar</p>
+            </details>
+         </section>
+         <footer>
+            <p> © 2023 Sachin Baghel, All rights reserved</p>
+         </footer>
+     </div>
    
 </body>
 </html>
