changes in media file

--- a/Lecture_11_WD/media_tag.html
+++ b/Lecture_11_WD/media_tag.html
@@ -7,7 +7,18 @@
     <title>Document</title>
 </head>
 <body>
-    <img src="sachin.jpg" alt="myname" height="230px" width="300px" loading="lazy">
+    <h3 style="color:gold">=====Index=====</style></h3>
+        <ul>
+            <li><a style="color:blue" href="#OS"> OS Lacture</a></li>
+            <li><a style="color:blue" href="#page">Resume</a></li>
+            <li><a style="color:blue" href="#YT"> Youtube</a></li>
+            
+        </ul>
+        <h3 style="color:gold">==============</style></h3>
+   
+
+
+    <img src="sachin.jpg" alt="myname" height="400px" width="500px" loading="lazy">
     <br>
     <p>Kahani Suno 2.O Song</p>
     <audio src="kahani.mp3" controls></audio>
@@ -16,15 +27,19 @@
         <source src="kahani.mp3" type="audio/mp3">
     </audio> -->
     <p>Lecture OS</p>
-   <video src="OS.mp4" controls height="200"></video>
-    <!-- <br> -->
-    <iframe src="https://www.youtube.com/embed?v=fb4rgYbi84c&list=PLDzeHZWIZsTo0wSBcg4-NMIbC0L8evLrD&index=11&ab_channel=CodeHelp-byBabbar" frameborder="2" width="500px" height="400px"></iframe>
+   <video src="OS.mp4" controls height="400px" width="500px" id="OS"></video>
+    <br>
+    <iframe src="https://www.youtube.com/embed?v=fb4rgYbi84c&list=PLDzeHZWIZsTo0wSBcg4-NMIbC0L8evLrD&index=11&ab_channel=CodeHelp-byBabbar" frameborder="2" width="500px" height="400px" id="YT"></iframe>
     <br>
     <br>
     <p>Add other pages or other frame of website</p>
-    <iframe src="../Lecture_10_WD/Project-HTML.html" frameborder="0" width="500px" height="400px"></iframe>
-    
+    <iframe src="../Lecture_10_WD/Project-HTML.html" frameborder="0" width="500px" height="400px"  id="page"></iframe>
+     <br>
+     <p>This is my first web page by html</p>    
+     <iframe src="../Lecture_5_WD/index.html" frameborder="0" height="400px" width="500px"></iframe>
+     <br>
 
+     <!-- <aside>hello </aside> -->
 
 </body>
 </html>
